# QuantNet-Solver

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  soul.md
cmake/: QuantNetConfig.cmake.in
src/: main.cpp
src/exploit/: OpponentModel.cpp  OpponentModel.hpp
src/network/: SimpleTelemetry.hpp  Telemetry.hpp
src/parallel/: ParallelJacobian.hpp
src/poker/: CardAbstraction.cpp  CardAbstraction.hpp  ExpectedValue.cpp  ExpectedValue.hpp  GameTree.hpp  GameTypes.hpp  HandEvaluator.cpp  HandEvaluator.hpp  KuhnPoker.cpp  KuhnPoker.hpp  LeducPoker.cpp  LeducPoker.hpp  QRE.cpp  QRE.hpp  Strategy.cpp  Strategy.hpp
src/solver/: CFR.cpp  CFR.hpp  Diagnostics.hpp  FiniteDiff.hpp  LineSearch.hpp  NewtonSolver.cpp  NewtonSolver.hpp
tests/: CMakeLists.txt  test_cfr.cpp  test_hand_evaluator.cpp  test_kuhn_ev.cpp  test_newton.cpp
viz/: app.js  index.html  serve.py  styles.css
